--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,6 +112,10 @@ a {
     margin-top: 13rem;
 }
 
+.hero .info {
+    width: 51%;
+}
+
 .hero .sub-title {
     color: #687e90;
     font-size: 1.8rem;
@@ -121,10 +125,22 @@ a {
 }
 
 .hero .title {
-    margin-top: 8px;
+    margin-top: 0.8rem;
     color: #000336;
-    font-size: 6.4rem;
-    font-weight: 700;
+    font-size: 6.2rem;
+    font-weight: 650;
     line-height: 1.19; /* 118.75% */
 }
 
+.hero .desc {
+    margin-top: 3rem;
+    color: #5a6473;
+    font-size: 1.78;
+    font-weight: 400;
+    line-height: 3.2rem;
+}
+
+.hero-cta {
+    min-width: 17rem;
+    margin-top: 4rem;
+}
