--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -179,5 +179,45 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center; /* Can giua truc ngang */
-    
+}
+
+/* ============== Guides ================ */
+.guides {
+    margin-top: 20rem;
+    position: relative;
+}
+
+.guides .sub-title {
+    font-weight: 600;
+    font-size: 3.5rem;
+    line-height: 1;
+    text-align: center;
+    color: #000339;
+}
+
+.guides .sub-title::before {
+    position: absolute;
+    /* The cha phai la the relative */
+    top: -10px;
+    content: "";
+    display: inline-block;
+    width: 41px;
+    height: 4px;
+    background: #000339;
+    border-radius: 12px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.guides .desc {
+    /* The block can giua kieu khac */
+    width: 459px;
+    max-width: 100%;
+    /* Tranh xuat hien thanh cuon ngang */
+    margin: 20px auto 0;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.88;
+    text-align: center;
+    color: #5a6473;
 }
