--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -221,3 +221,48 @@ a {
     text-align: center;
     color: #5a6473;
 }
+
+.list-guide {
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+}
+
+.guide-item {
+    margin: 0 70px;
+    /* can trai phai 70 */
+    text-align: center;
+    /* Can the img vi the li la inline */
+}
+
+.guide-item .title {
+    margin-top: 26px;
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 22px;
+    /* font size 20 -> 22:20 = 1.1 */
+    color: #3b3c45;
+}
+
+.guide-item .link {
+    display: inline-block;
+    margin-top: 10px;
+    /* The a display la inline nen khong an duoc margintop, phai them vao display inline block */
+    font-weight: 600;
+    font-size: 1.4rem;
+    color: #0689ff;
+}
+
+.guide-item .arrow {
+    margin-left: 6px;
+}
+
+.guide-cta {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.guide-cta .btn {
+    min-width: 170px;
+}
