--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -266,3 +266,39 @@ a {
 .guide-cta .btn {
     min-width: 170px;
 }
+
+/* ========== FEATURED ========= */
+.featured_properties {
+    margin-top: 27rem;
+    width: 1110px;
+    max-width: calc(100% - 48px);
+    /* Neu man hinh nho hon 1110 thi se an cai maxwidth 100% va moi ben trai phai can le 24  */
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.featured_properties .title {
+    font-weight: 600;
+    font-size: 3.5rem;
+    line-height: 1;
+    color: #000339;
+}
+.featured_properties .sub-titlebox {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.featured_properties .sub-title {
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 0.5;
+    color: #5a6473;
+}
+
+.featured_properties .text {
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #0689ff;
+}
