--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,7 +164,10 @@ a {
 
 /* =========== Clients =============== */
 .clients {
-    margin-top: 12.2rem;
+    margin-top: 79px;
+    padding: 43px 0 64px;
+    /* Top:43, bot:64 */
+    /* Sửa cho padding ở bên trong chứ không phải chỉ margin */
 }
 
 .clients .row {
@@ -192,8 +195,8 @@ a {
 
 /* ============== Guides ================ */
 .guides {
-    margin-top: 20rem;
-    position: relative;
+    margin-top: 40px;
+    padding: 93px 0 79px;
 }
 
 .guides .sub-title {
@@ -202,6 +205,7 @@ a {
     line-height: 1;
     text-align: center;
     color: #000339;
+    position: relative;
 }
 
 .guides .sub-title::before {
@@ -278,10 +282,11 @@ a {
 
 /* ========== FEATURED ========= */
 .features {
-    margin-top: 120px;
+    margin-top: 41px;
     height: 727px;
     background: #f5fafe;
 }
+
 .featured_properties {
     padding-top: 120px;
     width: 1110px;
@@ -527,3 +532,30 @@ a {
     margin-left: 0;
 }
 /* Thẻ giả, chọn cái icon đầu tiên */
+
+/* ================= STATS ================= */
+.stats {
+    margin-top: 75px;
+    padding: 50px;
+}
+
+.stats .row {
+    display: flex;
+}
+
+.stats .content {
+    width: 1048px;
+}
+
+.stats .img-block,
+.stats .info {
+    width: 50%;
+    /* Đo cái nhà với cái đè lên là 520:1048, gần bằng 50%, 2 cục đó chia 1 nửa ra  */
+}
+
+.stats .img-block .img{
+    width: 400px;
+    height: 460px;
+    object-fit: cover;
+    /* Để không bị méo ảnh */
+}
