--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -187,10 +187,24 @@ a {
 }
 
 .clients .images {
-    margin-top: 9.6rem;
+    margin-top: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center; /* Can giua truc ngang */
+}
+
+.clients .images a {
+    display: flex;
+    align-items: center;
+    /* Thêm để nó ăn cái height 90, với align item */
+    height: 90px;
+    padding: 0 42px;
+    /* Cho khỏi bị dài ngắn */
+    border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px 0px #0000001a;
 }
 
 /* ============== Guides ================ */
