--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -807,7 +807,15 @@ a {
     width: 28px;
     height: 28px;
     border-radius: 3px;
+    background: #f9f9f9;
 }
+
+
+.footer .social-link + .social-link {
+    /* social link đứng sau social link thì bị tác động */
+    margin-left: 16px;
+}
+
 
 .footer .social-link:hover {
     background: #f0eded;
