--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,13 +12,17 @@
     /* Dat bien */
     --primary-color: #0f1b4c;
 }
+html,body {
+    scroll-behavior: smooth;
 
+}
 html {
     font-size: 62.5%;
     /* Tại sao lại là 62.5%?
     Kích thước phông chữ mặc định của trình duyệt thường là 16px. Khi bạn đặt font-size của phần tử html thành 62.5%, bạn đang làm cho kích thước phông chữ cơ sở trở thành 10px (62.5% của 16px là 10px).
     Sử dụng rem dễ dàng hơn: Đơn vị rem (root em) tương ứng với kích thước phông chữ của phần tử gốc (phần tử html). Khi bạn đã đặt kích thước phông chữ gốc thành 10px, bạn có thể dễ dàng tính toán kích thước phông chữ bằng rem. Ví dụ:
     1rem = 10px */
+
 }
 
 body {
@@ -80,6 +84,8 @@ a {
 }
 
 .hero-wrap {
+    justify-content: center;
+    /* Khi co flex direction  + display flex them de can giua*/
     position: relative;
     display: flex;
     flex-direction: column;
@@ -94,7 +100,6 @@ a {
     /* padding-top: 48px; */
 
     padding: 12px 0;
-    
 
 
     /* neu su dung margin thi se day nguyen cai mau nen luon */
@@ -134,15 +139,13 @@ a {
     margin-left: 18px;
 }
 
-.hero {
-    margin-top: 13rem;
-}
 
-.hero .info {
+
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     color: #687e90;
     font-size: 1.8rem;
     font-weight: 500;
@@ -150,7 +153,7 @@ a {
     letter-spacing: 0.018rem;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 0.8rem;
     color: #000336;
     font-size: 6.2rem;
@@ -158,7 +161,7 @@ a {
     line-height: 1.19; /* 118.75% */
 }
 
-.hero .desc {
+.hero-wrap .desc {
     margin-top: 3rem;
     color: #5a6473;
     font-size: 1.78;
@@ -166,7 +169,7 @@ a {
     line-height: 3.2rem;
 }
 
-.hero-cta {
+.hero.hero-wrap {
     min-width: 17rem;
     margin-top: 4rem;
 }
